# FBGEMM

./: README.md  jagged_to_dense_output.pt
.github/workflows/: fbgemmci.yml
fbgemm_gpu/: FbgemmGpu.cmake
fbgemm_gpu/bench/: bench_utils.py  jagged_tensor_benchmark.py  jagged_tensor_benchmark_jagged_dense_dense_elementwise_add_jagged_output.py  jagged_tensor_benchmark_jagged_dense_elementwise_mul.py  jagged_tensor_benchmark_jagged_to_dense.py  split_embeddings_cache_benchmark.py  split_table_batched_embeddings_benchmark.py
fbgemm_gpu/codegen/: embedding_backward_split_template.cu
fbgemm_gpu/codegen/genscript/: jinja_environment.py
fbgemm_gpu/codegen/training/forward/: embedding_forward_split_template.cu
fbgemm_gpu/fbgemm_gpu/: split_table_batched_embeddings_ops.py
fbgemm_gpu/hip_kernel/: split_tbe_bwd.hip.hpp  split_tbe_bwd_hip.cpp  split_tbe_common_hip.h
fbgemm_gpu/include/fbgemm_gpu/: fbgemm_cuda_utils.cuh
fbgemm_gpu/include/fbgemm_gpu/utils/: cuda_prelude.cuh
fbgemm_gpu/src/: cumem_utils.cu  cumem_utils.h  jagged_tensor_ops.cu  split_embeddings_cache_cuda.cu  split_embeddings_utils.cu
fbgemm_gpu/test/: split_table_batched_embeddings_test.py
fbgemm_gpu/test/tbe/: common.py
fbgemm_gpu/test/tbe/training/: forward_test.py
fbgemm_gpu/test/tbe/training/v2_kernel/: CMakeLists.txt  gen_embedding_forward_split_unweighted_v2_kernel.hip  load  load.cpp
fbgemm_gpu/test/tbe/training/v2_kernel/buid/: Makefile  hip_new_types_hip.cc  inputs.pt  load
