cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(example-app)
set(CMAKE_VERBOSE_MAKEFILE on)
set(CMAKE_C_COMPILER "hipcc")
set(CMAKE_CXX_COMPILER "hipcc")
list(APPEND CMAKE_PREFIX_PATH "/opt/conda/envs/py_3.10/lib/python3.10/site-packages/torch")
list(APPEND CMAKE_PREFIX_PATH "/opt/rocm")
include_directories ("/workspace/FBGEMM_local/fbgemm_gpu/include")
ADD_DEFINITIONS(-DNDEBUG)
ADD_DEFINITIONS(-DUSE_ROCM)
find_package(Torch REQUIRED)
find_package(HIP REQUIRED)
list(APPEND HIP_HCC_FLAGS --offload-arch=gfx942)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS} ${HIP_HCC_FLAGS} -Wuninitialized")
add_executable(load load.cpp gen_embedding_forward_split_unweighted_v2_kernel.hip)
target_link_libraries(load "${TORCH_LIBRARIES}")
